<resources>
    <string name="app_name">TaskFam</string>
    <string name="login_title">Bienvenido</string>
    <string name="login_description">Ingresa tus datos para inciar sesión</string>
    <string name="register_title">Registro</string>
    <string name="register_description">Ingresa tus datos para registrarte</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="no_account">¿No tienes una cuenta?</string>">
    <string name="register">Registrarse</string>
    <string name="already_have_account">¿Ya tienes una cuenta?</string>
    <string name="house">Hogar</string>
    <string name="create_house">Crear hogar</string>
    <string name="join_house">Unirse a un hogar</string>
    <string name="log_out">Cerrar sesion</string>
    <string name="name_house">Nombre del hogar</string>
    <string name="permissions_familiy">Permisos de los miembros</string>
    <string name="edit">Editar</string>
    <string name="no_edit">No editar</string>
    <string name="accept">Aceptar</string>
    <string name="enter_code_to_join">Ingresar código para unirse</string>
    <string name="today">Hoy</string>
    <string name="weekly">Semanal</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miercoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sabado</string>
    <string name="sunday">Domingo</string>
    <string name="enter_task_title">Agregar tarea</string>
    <string name="edit_task_title">Editar tarea</string>
    <string name="enter_task_description">Ingrese los datos de la tarea</string>
    <string name="edit_task_description">Edite los datos de la tarea</string>
    <string name="task_name">Nombre de la tarea</string>
    <string name="task_description">Descripcion breve</string>
    <string name="members_description">Seleccione los habitantes que se harán cargo</string>
    <string name="select_member">Seleccionar miembro</string>
    <string name="eliminate">Eliminar</string>
    <string name="configuration">Configuración</string>
    <string name="enter_x_to_days">Asignar a X todos los dias</string>
    <string name="house_code">Codigo del hogar:</string>
    <string name="members_role">Rol de los miembros</string>
    <string name="go_back">Volver al menu principal</string>
    <string name="complete_task">Completar tarea</string>
    <string name="name">Nombre</string>
    <string name="delete_house">Borrar hogar</string>
    <string name="format_password">La contraseña debe medir de 6 a 12 caracteres, debe contener al menos una mayuscula y una minuscula</string>
</resources>