<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_description"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableStart="@android:drawable/ic_menu_myplaces"
        android:paddingStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background_blue_sky"
        app:cornerRadius="20dp"/>

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:hint="@string/email"
        android:textStyle="bold"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:paddingStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background_blue_sky"
        app:cornerRadius="20dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:paddingStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background_blue_sky"
        app:cornerRadius="20dp"/>

    <EditText
        android:id="@+id/etConfirmarContrasena"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:hint="@string/confirm_password"
        android:textStyle="bold"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:paddingStart="16dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background_blue_sky"
        app:cornerRadius="20dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue_brilliant"
        app:cornerRadius="20dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tvYaTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

</LinearLayout>