<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings">

    <ImageView
        android:id="@+id/ivBackArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back_arrow"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuration"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_code"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_blue_sky"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivHouseIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/house"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/name_house"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingStart="16dp"
            android:background="@drawable/background_blue_sky"
            app:cornerRadius="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/background_blue_sky"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_blue_sky"
            android:layout_marginBottom="20dp"

            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivRole"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/people"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />
        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:hint="@string/members_role"
            android:textStyle="bold"
            android:paddingStart="16dp"
            android:background="@drawable/background_blue_sky"
            android:inputType="textPassword" />
        </LinearLayout>
        <ListView
            android:id="@+id/listViewMiembros"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/gray_light"
        app:cornerRadius="20dp"
        android:text="@string/go_back" />

    <TextView
        android:id="@+id/tvNoTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_house"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

</LinearLayout>